@@ -22,6 +22,8 @@ Version 1.5
 
 - Several fixes to the reStructuredText lexer (#636).
 
+- Recognize methods in the ObjC lexer (#638).
+
 - Fix Lua "class" highlighting: it does not have classes (#665).
 
 - Fix degenerate regex in Scala lexer (#671).
